--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://startups.ad/favicon/favicon-16x16.png">
     <link rel="manifest" href="https://startups.ad/favicon/site.webmanifest">
 
-    <!-- Open Graph Metadata -->
+    <!-- Default Open Graph Metadata -->
     <meta property="og:title" content="Advertise your startup for free 🥳" />
     <meta property="og:description" content="Advertise your startup for free get quality backlink, traffic and badge" />
     <meta property="og:image" content="https://startups.ad/Images/startups-preview.jpg" />
