--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Advertise your startup for free 🥳</title>
 
-    <!-- Google Fonts -->
+    <!-- Preload Critical Resources -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" as="style" />
+    <link rel="preload" href="/src/index.css" as="style" />
+    
+    <!-- Google Fonts with display=swap -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Favicon Links -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://startups.ad/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://startups.ad/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://startups.ad/favicon/favicon-16x16.png">
-    <link rel="manifest" href="https://startups.ad/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
 
     <!-- Default Open Graph Metadata -->
     <meta property="og:title" content="Advertise your startup for free 🥳" />
