--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>Discover Money-Making Startups | startups.ad</title>
-    <meta name="title" content="Discover Money-Making Startups | startups.ad" />
+    <title>Discover and advertise startups for free</title>
+    <meta name="title" content="Discover and advertise startups for free" />
     <meta name="description" content="Explore curated money-making startups, case studies, and marketing insights. Join our newsletter for bi-weekly startup success stories and growth strategies." />
     <meta name="keywords" content="startups, entrepreneurship, business growth, SaaS, marketing, case studies, startup directory" />
     <meta name="author" content="startups.ad" />
@@ -38,14 +38,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://startups.ad" />
-    <meta property="og:title" content="Discover Money-Making Startups | startups.ad" />
+    <meta property="og:title" content="Discover and advertise startups for free" />
     <meta property="og:description" content="Explore curated money-making startups, case studies, and marketing insights. Join our newsletter for bi-weekly startup success stories and growth strategies." />
     <meta property="og:image" content="https://startups.ad/Images/startups-preview.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://startups.ad" />
-    <meta property="twitter:title" content="Discover Money-Making Startups | startups.ad" />
+    <meta property="twitter:title" content="Discover and advertise startups for free" />
     <meta property="twitter:description" content="Explore curated money-making startups, case studies, and marketing insights. Join our newsletter for bi-weekly startup success stories and growth strategies." />
     <meta property="twitter:image" content="https://startups.ad/Images/startups-preview.jpg" />
 
